refactor: StringUtils.isBlank